--- a/index/index.html
+++ b/index/index.html
@@ -9,9 +9,9 @@
     <a href="#turkey">Skip To Turkey</a>
 </header><br>
 <div>
-    <a href="index.l.html" target="blank">Home</a>
+    <a href="index.html" target="blank">Home</a>
     <a href="index.html" target="blank">About Istanbul</a>
-    <a href="index .html" target="blank">About Antalya</a>
+    <a href="index.html" target="blank">About Antalya</a>
 </div>
   <div>
    <h1 id="turkey">Turkey</h1>
