--- a/index/index.html
+++ b/index/index.html
@@ -2,59 +2,60 @@
 <html lang="tr">
 <head>
 	<meta charset="utf-8">
-	<title>My New Project</title>
+	<title>index 1</title>
 </head>
 <body> 
-    <header>  
-    <a href="#turkey">Skip To Turkey</a>
+	  <header>  
+    <a href="#Antalya">Skip To Antalya</a>
 </header><br>
 <div>
-    <a href="index.html" target="_blank">Home</a>
-    <a href="index.html" target="_blank">About Istanbul</a>
-    <a href="index.html" target="_blank">About Antalya</a>
+    <a href="index.html.html" target="blank">Home</a>
+    <a href="index.html" target="blank">About Istanbul</a>
+    <a href="index 1.html" target="blank">About Antalya</a>
 </div>
-  <div>
-   <h1 id="turkey">Turkey</h1>
-   <nav>
+<div>
+   <h1 id="Antalya">Antalya</h1>
+     <nav>
     <ul>
-   <li><p>Turkey is a country that uniquely straddles both Europe and Asia, offering a blend of Eastern and Western cultures. With a rich history that spans thousands of years, Turkey has been home to many ancient civilizations, including the Greeks, Romans, Byzantines, and Ottomans. This diverse heritage is visible in its architecture, ruins, and traditions, making it a captivating destination for history enthusiasts.</p></li>
+   <li><p>Antalya, located on the southwestern coast of Turkey, is one of the country’s most beautiful and historically rich cities. Known as the "Turkish Riviera," it boasts a stunning Mediterranean coastline, pristine beaches, and a warm, sunny climate nearly year-round. Antalya is famous not only for its natural beauty but also for its rich historical and cultural heritage, making it a top destination for travelers from all over the world.</p></li>
 
-   <li><p>The capital city, Ankara, is the political center, while Istanbul, the country's largest city, is a cultural and economic hub. Istanbul, historically known as Byzantium and Constantinople, is famous for its iconic landmarks such as the Hagia Sophia, Blue Mosque, and Topkapi Palace. These sites reflect the city's past as a center of both the Christian Byzantine Empire and the Islamic Ottoman Empire.</p></li>
+   <li><p>Historically, Antalya has been a crossroads for many civilizations, including the Romans, Byzantines, and Ottomans. This heritage is reflected in the city’s architecture and landmarks, such as Hadrian’s Gate, an ancient Roman triumphal arch, and the old town (Kaleiçi), with its narrow, winding streets and well-preserved Ottoman houses. The city's Archaeological Museum also houses a vast collection of artifacts from various periods, showcasing the region's rich history.</p></li>
 
-   <li><p>Turkey's natural beauty is just as impressive as its historical sites. The country boasts a wide variety of landscapes, from the Mediterranean and Aegean coastlines with pristine beaches to the mountainous regions of Cappadocia and the Taurus Mountains. Cappadocia, in particular, is known for its unique rock formations, underground cities, and hot air balloon rides that offer breathtaking views.</p></li>
+   <li><p>Antalya is also a hub for outdoor activities. Visitors can explore nearby waterfalls, such as Düden and Kursunlu, or hike through the scenic trails of Köprülü Canyon National Park. The beaches in Antalya, including Konyaaltı Beach and Lara Beach, are famous for their crystal-clear waters and clean sands, providing a perfect backdrop for swimming, sunbathing, or water sports.</p></li>
 
-   <li><p>The cuisine in Turkey is another highlight, blending Middle Eastern, Mediterranean, and Central Asian influences. Dishes like kebabs, baklava, and Turkish tea are enjoyed both locally and around the world. Turkish hospitality is also renowned, with locals often going out of their way to welcome visitors.</p></li>
+   <li><p>For those interested in more modern attractions, Antalya has a vibrant nightlife, with plenty of bars, restaurants, and cafes lining its streets. The city is also known for hosting festivals, including the Antalya Golden Orange Film Festival, one of Turkey’s most prestigious cultural events.</p></li>
 
-   <li><p>Modern Turkey is a secular republic, but religion, particularly Islam, still plays a significant role in daily life. The country's strategic location, vibrant culture, and dynamic economy make it an influential player both regionally and globally.</p></li>
+   <li><p>In summary, Antalya offers a unique blend of historical intrigue, natural beauty, and modern leisure, making it a must-visit destination for travelers from all over the world.</p></li>
 </ul>
 </nav>
 </div>
- <div>
-    <h1>Turkish Cities</h1>
+<div>
+<h1>Places And Landmarks In Antalya</h1>
       <table style="width: 100%;">
           <tr>
-              <th>Ankara</th>
-              <th>Istanbul</th>
-              <th>Bodrum</th>
-              <th>Trabzon</th>
-              <th>Çanakkale</th>
-          </tr>
-          <tr style="height: 200%;">
-            <td>Ankara, the capital of Turkey, is known for its rich history and modern architecture. It's a cultural and political hub, with landmarks like Anıtkabir and the Museum of Anatolian Civilizations. The city blends traditional and contemporary elements, offering a mix of historical sites and vibrant urban life. Its central location makes it an important administrative and diplomatic center. Additionally, Ankara is known for its universities, green spaces, and lively arts scene. Although less touristic than Istanbul, it offers a unique insight into Turkey’s cultural and political landscape.</td>
-            <td>Istanbul, a vibrant city straddling Europe and Asia, is known for its rich history and cultural diversity. The city boasts iconic landmarks like the Hagia Sophia, Blue Mosque, and Topkapi Palace. Its bustling markets, including the Grand Bazaar, offer a mix of traditional and modern goods. Istanbul's location along the Bosphorus Strait provides stunning waterfront views and connects two continents. With a unique blend of Eastern and Western influences, the city offers a dynamic culinary scene, lively neighborhoods, and a captivating mix of ancient and contemporary architecture.</td>
-            <td>Bodrum is a vibrant coastal town in southwestern Turkey, known for its stunning beaches, clear blue waters, and rich history. It boasts ancient ruins, including the Mausoleum of Halicarnassus, one of the Seven Wonders of the Ancient World. Bodrum is also famous for its lively nightlife, luxury resorts, and marina filled with yachts. Popular among tourists, it offers a mix of cultural heritage and modern amenities. The town is a hub for sailing, diving, and exploring the Aegean Sea. Its Mediterranean charm makes it a favorite destination year-round.</td>
-            <td>Trabzon is a beautiful city located on the northeastern coast of Turkey, along the Black Sea. Known for its rich history, it was an important trade center on the Silk Road. The city's landmarks include the Hagia Sophia of Trabzon, Sumela Monastery, and stunning natural landscapes like Uzungöl Lake. With its mild climate, lush green hills, and rich cultural heritage, Trabzon offers visitors a blend of nature, history, and local cuisine, especially its famous anchovies. It’s a perfect destination for those seeking adventure and serenity alike.</td>
-            <td>Çanakkale is a city in Turkey, located on the Dardanelles Strait, which connects the Aegean Sea to the Sea of Marmara. It is historically significant for being near the site of ancient Troy and for the Gallipoli Campaign during World War I. The city is a gateway to the Gallipoli Peninsula and hosts memorials dedicated to soldiers who fought there. Today, Çanakkale is a blend of historical landmarks, beautiful coastal views, and vibrant culture, attracting tourists interested in its rich past and scenic beauty.</td>
-          </tr>
-      </table>
-<div>
-    <h1>Pictures Of Turkish Cities</h1>
-  <details><summary>Ankara</summary><br><img src="Turkey/Ankara.jpg" alt="a" width="700" height="400" > <img src="Turkey/Ankara 2.jpg" alt="a" width="700" height="400" > <img src="Turkey/Ankara 3.jpg" alt="a" width="700" height="400" ></details><br>
-  <details><summary>Istanbul</summary><br><img src="Turkey/Istanbul.jpg" alt="i" width="700" height="300"> <img src="Turkey/Istanbul 2.jpg" alt="i" width="700" height="300"> <img src="Turkey/Istanbul 3.jpg" alt="i" width="750" height="450"></details><br>
-  <details><summary>Bodrum</summary><br><img src="Turkey/Bodrum.jpg" alt="b" width="700" height="300"> <img src="Turkey/Bodrum 2.jpg" alt="b" width="700" height="300"> <img src="Turkey/Bodrum 3.jpg" alt="b" width="700" height="300"></details><br>
-  <details><summary>Trabzon</summary><br><img src="Turkey/Trabzon.jpg" alt="t" width="700" height="300"> <img src="Turkey/Trabzon 2.jpg" alt="t" width="700" height="300"> <img src="Turkey/Trabzon 3.jpg" alt="t" width="700" height="300"></details><br>
-  <details><summary>Çanakkale</summary><br><img src="Turkey/Çanakkale.jpg" alt="r" width="700" height="300"> <img src="Turkey/Çanakkale 2.jpg" alt="r" width="700" height="300"> <img src="Turkey/Çanakkale 3.jpg" alt="r" width="700" height="300"></details><br>
-  </div>
+              <th>Karain Cave</th>
+              <th>Termessos</th>
+              <th>Perga</th>
+              <th>Simena</th>
+              <th>Myra</th>
+            </tr>
+         <tr style="height: 200%;">
+         	<td>Karin Cave, located near Antalya, Turkey, is a significant archaeological site. It contains ancient human remains and artifacts, providing valuable insights into prehistoric life and early human habitation in the region.</td>
+         	<td>Termessos is an ancient city located in the mountains near Antalya, Turkey. Known for its well-preserved ruins, it offers stunning views and historical significance, with remnants like an amphitheater and temples.</td>
+         	<td>Perga, located near Antalya, Turkey, is an ancient city known for its well-preserved Roman ruins. Highlights include the impressive city gate, a theater, a stadium, and ancient baths.</td>
+         	<td>Simena, located in Antalya, Turkey, is a small, picturesque village known for its ancient ruins, stunning sea views, and a historic castle overlooking the Mediterranean. It's accessible by boat.</td>
+         	<td>Myra, located in Antalya, Turkey, is an ancient city known for its rock-cut tombs and large Roman theater. It was once a major Lycian city and is also associated with Saint Nicholas, the inspiration for Santa Claus.</td>
+         </tr>
+     </table>
+ </div>
+ <div>
+ 	<h1>Pictures Of Places And Landmarks In Antalya</h1>
+ 	<details><summary>Karain Cave</summary><img src="Antalya/img1.jpeg" alt="Antalya" width="600" height="300"></details><br>
+ 	<details><summary>Termessos</summary><img src="Antalya/img2.jpg" alt="Antalya" width="600" height="300"></details><br>
+ 	<details><summary>Perga</summary><img src="Antalya/img3.png" alt="Antalya" width="600" height="300"></details><br>
+ 	<details><summary>Simena</summary><img src="Antalya/img4.jpg" alt="Antalya" width="600" height="300"></details><br>
+ 	<details><summary>Myra</summary><img src="Antalya/img5.jpg" alt="Antalya" width="600" height="300"></details><br>
+ </div>
   <style>
        body{
        background-color: #E7E9EB;
