--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <a href="#turkey">Skip To Turkey</a>
 </header><br>
 <div>
-    <a href="turkey.html" target="_parent">Home</a>
-    <a href="istanbul.html" target="_parent">About Istanbul</a>
-    <a href="antalya.html" target="_parent">About Antalya</a>
+    <a href="index.html" target="_parent">Home</a>
+    <a href="index.html" target="_parent">About Istanbul</a>
+    <a href="index.html" target="_parent">About Antalya</a>
 </div>
   <div>
    <h1 id="turkey">Turkey</h1>
